hw 6
исправления